Revision history for Config::App

{{$NEXT}}
        - Returned complex data structures are copies not refs to original data

1.06      2018-06-15 16:03:13-07:00 America/Los_Angeles
        - Adding Perl versions to test; annual general update for 2018
        - Extended "libs" keyword to allow for single scalar string

1.05      2017-01-10 04:03:20-08:00 America/Los_Angeles
        - import() accepts multiple library dirs
        - import() gracefully calls new()
        - Support for the "libs" configuration keyword

1.04      2016-08-31 08:26:11-07:00 America/Los_Angeles
        - Add "optional_include" keyword functionality

1.03      2015-09-08 19:13:28-07:00 America/Los_Angeles
        - Library directory injection during import

1.02      2015-06-09 19:10:53-07:00 America/Los_Angeles
        - Small POD improvement

1.01      2015-06-09 18:46:36-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.